--- a/Web/FrontEnd/package.json
+++ b/Web/FrontEnd/package.json
@@ -10,6 +10,7 @@
     "react-icons": "^4.12.0",
     "react-router-dom": "v6",
     "react-scripts": "5.0.1",
+    "recharts": "^2.10.1",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
